--- a/index.html
+++ b/index.html
@@ -20,22 +20,127 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script type="text/babel">
-      const root = document.getElementById("root");
+      function MinutesToHours() {
+        const [amount, setAmount] = React.useState(0);
+        const [inverted, setinverted] = React.useState(false); //tf -> flip 했는지 안했는지 확인
 
-      function App() {
-        const [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-          setCounter(counter + 1);
+        const onChange = (event) => {
+          setAmount(event.target.value);
+        };
+
+        const reset = () => setAmount(0);
+
+        const onInvert = () => {
+          reset();
+          setinverted((current) => !current); //false면 true
         };
 
         return (
           <div>
-            <h3>Total clicks : {counter}</h3>
-            <button onClick={onClick}>Click me</button>
+            <div>
+              <label htmlFor="minutes">Minutes</label>
+              <input
+                value={inverted ? amount * 60 : amount} //분 상태면 60곱해서 보여주고 아니면 그냥 값
+                id="minutes"
+                placeholder="Minutes"
+                type="number"
+                onChange={onChange}
+                disabled={inverted}
+              />
+            </div>
+
+            <div>
+              <label htmlFor="hours">Hours</label>
+              <input
+                value={inverted ? amount : Math.round(amount / 60)}
+                id="hours"
+                placeholder="Hours"
+                type="number"
+                onChange={onChange}
+                disabled={!inverted}
+              />
+            </div>
+
+            <button onClick={reset}>Reset</button>
+            <button onClick={onInvert}>
+              {inverted ? "Turn back" : "Invert"}
+            </button>
           </div>
         );
       }
 
+      function CmToM() {
+        const [amount, setAmount] = React.useState(0);
+        const [inverted, setinverted] = React.useState(false); //tf -> flip 했는지 안했는지 확인
+
+        const onChange = (event) => {
+          setAmount(event.target.value);
+        };
+
+        const reset = () => setAmount(0);
+
+        const onInvert = () => {
+          reset();
+          setinverted((current) => !current); //false면 true
+        };
+
+        return (
+          <div>
+            <div>
+              <label htmlFor="Cm">Cm</label>
+              <input
+                value={inverted ? amount * 100 : amount} //분 상태면 60곱해서 보여주고 아니면 그냥 값
+                id="Cm"
+                placeholder="cm"
+                type="number"
+                onChange={onChange}
+                disabled={inverted}
+              />
+            </div>
+
+            <div>
+              <label htmlFor="M">M</label>
+              <input
+                value={inverted ? amount : (amount / 100).toFixed(3)}
+                id="M"
+                placeholder="m"
+                type="number"
+                onChange={onChange}
+                disabled={!inverted}
+              />
+            </div>
+
+            <button onClick={reset}>Reset</button>
+            <button onClick={onInvert}>
+              {inverted ? "Turn back" : "Invert"}
+            </button>
+          </div>
+        );
+      }
+
+      function App() {
+        const [index, setIndex] = React.useState("xx");
+        const onselect = (event) => {
+          setIndex(event.target.value);
+        };
+
+        return (
+          <div>
+            <h1>Converter</h1>
+            <select value={index} onChange={onselect}>
+              <option value="xx">Select your units</option>
+              <option value="0">Minutes & Hours</option>
+              <option value="1">Cm & M</option>
+            </select>
+            <hr />
+            {index === "xx" ? "Please select your units" : null}
+            {index === "0" ? <MinutesToHours /> : null}
+            {index === "1" ? <CmToM /> : null}
+          </div>
+        );
+      }
+
+      const root = document.getElementById("root");
       ReactDOM.render(<App />, root);
     </script>
   </body>
